# fccPredictHealthCostsWithRegression

./: .dockerignore  .gitignore  Dockerfile  Pipfile  README.md  README.me  __main__.py  app.py  converted_model.tflite  converter.py  docker-compose.yml  dockerfile  getData.py  main.py  makefile  model.h5  modelMaker.py  pyproject.toml  requirements.txt  setup.py  setup.sh  train_model.ipynb
src/: README.md  get_data.py  infer.py  regression_stats.py
