[project]
name = "fccPredictHealthCostsWithRegression"
version = "0.0.3"
authors = [
    {name="Thomas Fishwick", email="fishwickt@gmail.com"},
]
description = "Predict Health Costs With Regression for FreeCodeCamp"
readme = "README.md"
requires-python = ">=3.8"
keywords = ['python', 'DataScience']

[project.urls]
"repo" = "https://github.com/SL477/fccPredictHealthCostsWithRegression"