[project]
name = "fccPredictHealthCostsWithRegression"
version = "0.0.4"
authors = [
    {name="Thomas Fishwick"},
]
description = "Predict Health Costs With Regression for FreeCodeCamp"
readme = "README.md"
requires-python = ">=3.8"
keywords = ['python', 'DataScience']

[project.urls]
"repo" = "https://github.com/SL477/fccPredictHealthCostsWithRegression"